[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Background/space.png" type="Texture" id=1]
[ext_resource path="res://Scripts/menu_level.gd" type="Script" id=2]
[ext_resource path="res://Fonts/poco/Poco.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/transicao.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/sky.mp3" type="AudioStream" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxEmpty" id=29]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[node name="menu_level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="transition" parent="." instance=ExtResource( 6 )]
visible = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4000, 1124 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1824, 416 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 76.0
margin_top = 273.0
margin_right = 828.0
margin_bottom = 305.0
rect_scale = Vector2( 1.5, 1.5 )
focus_neighbour_top = NodePath("../HBoxContainer2/Button4")
focus_neighbour_right = NodePath("Button2")
focus_neighbour_bottom = NodePath("../HBoxContainer2/Button4")
focus_next = NodePath("Button2")
custom_constants/separation = 175
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 164.0
margin_right = 284.0
margin_bottom = 32.0
focus_neighbour_top = NodePath("../../HBoxContainer2/Button4")
focus_neighbour_right = NodePath("../Button2")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/Button4")
focus_next = NodePath("../Button2")
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.294118, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 1"
flat = true

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 459.0
margin_right = 587.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../Button")
focus_neighbour_top = NodePath("../../HBoxContainer2/Button4")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/Button4")
focus_previous = NodePath("../Button")
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.294118, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Level 2"
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 73.0
margin_top = 604.0
margin_right = 1209.0
margin_bottom = 658.0
custom_constants/separation = 880

[node name="Button4" type="Button" parent="HBoxContainer2"]
margin_right = 80.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../Button5")
focus_neighbour_top = NodePath("../../HBoxContainer/Button")
focus_neighbour_right = NodePath("../Button5")
focus_neighbour_bottom = NodePath("../../HBoxContainer/Button")
focus_next = NodePath("../Button5")
focus_previous = NodePath("../Button5")
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.294118, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
text = "BACK"
flat = true

[node name="Button5" type="Button" parent="HBoxContainer2"]
margin_left = 960.0
margin_right = 1136.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../Button4")
focus_neighbour_top = NodePath("../../HBoxContainer/Button")
focus_neighbour_right = NodePath("../Button4")
focus_neighbour_bottom = NodePath("../../HBoxContainer/Button")
focus_next = NodePath("../Button4")
focus_previous = NodePath("../Button4")
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.294118, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/focus = SubResource( 27 )
custom_styles/disabled = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
text = "STATISTICS"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -6.191
pitch_scale = 0.86
autoplay = true

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 12.0
margin_right = 545.0
margin_bottom = 98.0
focus_mode = 0
mouse_filter = 2
mouse_default_cursor_shape = 0
custom_fonts/font = ExtResource( 4 )
custom_styles/read_only = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
custom_styles/completion = SubResource( 24 )
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[connection signal="mouse_entered" from="HBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Button2" to="." method="_on_Button2_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="mouse_entered" from="HBoxContainer2/Button4" to="." method="_on_Button4_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer2/Button4" to="." method="_on_Button4_mouse_exited"]
[connection signal="pressed" from="HBoxContainer2/Button4" to="." method="_on_Button4_pressed"]
[connection signal="mouse_entered" from="HBoxContainer2/Button5" to="." method="_on_Button5_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer2/Button5" to="." method="_on_Button5_mouse_exited"]
[connection signal="pressed" from="HBoxContainer2/Button5" to="." method="_on_Button5_pressed"]
